--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ body {
     <main class="container">
         <div class="menu">
             <div class="avatar">
-                <img class="thumb" src="C:\Users\Admin\Documents\Hafeezath Thajudheen\mainpage\Dss.JFIF" width="60" />
+                <img class="thumb" src="C:\Dss.JFIF" width="60" />
                 <span class="name" style="color:rgb(124, 1, 1);">DSS Steel</span>
             </div>
             <nav class="primary">
