--- a/pdc.html
+++ b/pdc.html
@@ -62,7 +62,7 @@
 
 <body>
   <div class="video">
-    <img src="C:\Users\Admin\Documents\Hafeezath Thajudheen\mainpage\bg-body.jpg">
+    <img src="C:\Users\Admin\Documents\Hafeezath Thajudheen\Dss-webportal.github.io\bg-body.jpg">
 
   </img>
   </div>
