--- a/certificates.html
+++ b/certificates.html
@@ -48,8 +48,8 @@
 
 <body>
   <div class="video">
-    <!-- <img src="C:\Users\Dbrix\Documents\Deepthi\mainpage\wallpaper.jpg"> -->
-    <img src="C:\Users\Admin\Documents\Hafeezath Thajudheen\mainpage\bg-body.jpg">
+    <!-- <img src="C:\Users\Admin\Documents\Hafeezath Thajudheen\Dss-webportal.github.io\wallpaper.jpg"> -->
+    <img src="C:\Users\Admin\Documents\Hafeezath Thajudheen\Dss-webportal.github.io\bg-body.jpg">
 
   </img>
 
