--- a/orders.html
+++ b/orders.html
@@ -70,7 +70,7 @@
 <body>
   <div class="video">
     
-    <img src="C:\Users\Admin\Documents\Hafeezath Thajudheen\mainpage\bg-body.jpg">
+    <img src="C:\Users\Admin\Documents\Hafeezath Thajudheen\Dss-webportal.github.io\bg-body.jpg">
 
       </img>
  
