--- a/invoice.html
+++ b/invoice.html
@@ -65,7 +65,7 @@
 
 <body>
   <div class="video">
-    <img src="C:\Users\Admin\Documents\Hafeezath Thajudheen\Dss-webportal.github.io\bg-body.jpg">
+    <img src="\bg-body.jpg">
 
       </img>
  
