--- a/certificates.html
+++ b/certificates.html
@@ -49,8 +49,7 @@
 <body>
   <div class="video">
     <!-- <img src="C:\Users\Admin\Documents\Hafeezath Thajudheen\Dss-webportal.github.io\wallpaper.jpg"> -->
-    <img src="C:\Users\Admin\Documents\Hafeezath Thajudheen\Dss-webportal.github.io\bg-body.jpg">
-
+    <img src="\bg-body.jpg">
   </img>
 
 
