--- a/certificates.html
+++ b/certificates.html
@@ -47,6 +47,13 @@
 </style>
 
 <body>
+  <form>
+    <input type="button" value="🡸" onclick="history.back()" style="
+    background-color: rgb(226, 220, 220);
+    margin-left: 15px;">
+  </form>
+
+
   <div class="video">
     <!-- <img src="C:\Users\Admin\Documents\Hafeezath Thajudheen\Dss-webportal.github.io\wallpaper.jpg"> -->
     <img src="\bg-body.jpg">
