--- a/index.html
+++ b/index.html
@@ -31,17 +31,18 @@
 
     .div1 {
         background-color: rgb(255, 255, 255);
-        color: rgb(0, 0, 0);
-        font-size: 10px;
-        border-radius: 20px;
-        border: 1px;
-        border-style: solid;
-        width: 100%;
-        height: 300px;
-        margin: 10px;
-        text-align: center;
-        padding-top: 15px;
-        padding-left: 10px;
+    color: rgb(0, 0, 0);
+    font-size: 10px;
+    border-radius: 20px;
+    border: 1px;
+    border-style: solid;
+    width: 100%;
+    height: 200px;
+    margin-right: 10px;
+    margin-top: 20%;
+    text-align: center;
+    padding-top: 20%;
+    padding-left: 10px;
     }
 
     .dashboard {
