--- a/certificates.html
+++ b/certificates.html
@@ -2,13 +2,12 @@
 <html>
 
 <head>
-  <title >Material Test Certificates</title>
+  <title>Material Test Certificates</title>
 </head>
 <style>
   h1 {
     text-align: center;
-}
- 
+  }
 
   body .video {
     position: fixed;
@@ -20,19 +19,21 @@
     z-index: -1;
     /* background-color:  rgb(246,246,246); */
   }
+
   h1 {
     text-align: center;
   }
 
   h1:hover {
-    color: rgb(124,1,1);
+    color: rgb(124, 1, 1);
   }
+
   .certificates {
     width: fit-content;
     display: flex;
     flex-direction: initial;
     column-gap: 50px;
-    
+
   }
 
   .pdf {
@@ -43,7 +44,6 @@
   .pdf:hover {
     transform: scale(1.1);
   }
- 
 </style>
 
 <body>
@@ -52,13 +52,11 @@
     background-color: rgb(226, 220, 220);
     margin-left: 15px;">
   </form>
-
-
   <div class="video">
-    <!-- <img src="C:\Users\Admin\Documents\Hafeezath Thajudheen\Dss-webportal.github.io\wallpaper.jpg"> -->
-    <img src="\bg-body.jpg">
-  </img>
+    <!-- <img src="C:\Users\Dbrix\Documents\Deepthi\mainpage\wallpaper.jpg"> -->
+    <img src="C:\Users\Dbrix\Documents\Deepthi\bg-body.jpg">
 
+    </img>
 
   </div>
   <h1>Material Test Certificates</h1>
@@ -66,42 +64,81 @@
     <div class="pdf">
       <embed src="dayal-steel-fze 1.pdf" width="800px" height="600px" />
     </div>
+
     <div class="pdf">
       <embed src="dss-booklet.pdf" width="800px" height="600px" />
     </div>
+
     <div class="pdf">
       <embed src="MTC.pdf" width="800px" height="600px" />
     </div>
+
     <div class="pdf">
       <embed src="Sample-Valve-Material-Certificates.pdf" width="800px" height="600px" />
     </div>
+
     <div class="pdf">
       <embed src="Test-certificates.pdf" width="800px" height="600px" />
     </div>
-    <div class="pdf">
 
+    <div class="pdf">
       <embed src="dayal-steel-fze 1.pdf" width="800px" height="600px" />
     </div>
-    <div class="pdf">
 
+    <div class="pdf">
       <embed src="dss-booklet.pdf" width="800px" height="600px" />
     </div>
-    <div class="pdf">
 
+    <div class="pdf">
       <embed src="MTC.pdf" width="800px" height="600px" />
     </div>
 
     <div class="pdf">
-
       <embed src="Sample-Valve-Material-Certificates.pdf" width="800px" height="600px" />
     </div>
 
     <div class="pdf">
-
       <embed src="Test-certificates.pdf" width="800px" height="600px" />
+    </div>
+
+    <div class="pdf">
+      <embed src="Test Certificate 1.pdf" width="800px" height="600px" />
+    </div>
+
+    <div class="pdf">
+      <embed src="Test Certificate 2.pdf" width="800px" height="600px" />
+    </div>
+
+    <div class="pdf">
+      <embed src="Test Certificate 3.pdf" width="800px" height="600px" />
+    </div>
+
+    <div class="pdf">
+      <embed src="Test Certificate 4.pdf" width="800px" height="600px" />
+    </div>
+
+    <div class="pdf">
+      <embed src="Test Certificate 5.pdf" width="800px" height="600px" />
+    </div>
+
+    <div class="pdf">
+      <embed src="Test Certificate 6.pdf" width="800px" height="600px" />
+    </div>
+
+    <div class="pdf">
+      <embed src="Test Certificate 7.pdf" width="800px" height="600px" />
+    </div>
+
+    <div class="pdf">
+      <embed src="Test Certificate 8.pdf" width="800px" height="600px" />
+    </div>
+
+    <div class="pdf">
+      <embed src="Test Certificate 9.pdf" width="800px" height="600px" />
     </div>
 
   </div>
 </body>
 
 </html>
+
