--- a/pdc.html
+++ b/pdc.html
@@ -64,7 +64,8 @@
   <form>
     <input type="button" value="🡸" onclick="history.back()" style="
     background-color: rgb(226, 220, 220);
-    margin-left: 15px;">
+    margin-left: 5%;
+    margin-bottom: 20px;">
   </form>
 
 
