--- a/statement.html
+++ b/statement.html
@@ -65,7 +65,8 @@
   <form>
     <input type="button" value="🡸" onclick="history.back()" style="
     background-color: rgb(226, 220, 220);
-    margin-left: 15px;">
+    margin-left: 5%;
+    margin-bottom: 20px;">
   </form>
 
 
