--- a/certificates.html
+++ b/certificates.html
@@ -54,48 +54,13 @@
   </form>
   <div class="video">
     <!-- <img src="C:\Users\Dbrix\Documents\Deepthi\mainpage\wallpaper.jpg"> -->
-    <img src="C:\Users\Dbrix\Documents\Deepthi\bg-body.jpg">
-
+    <img src="\bg-body.jpg">
     </img>
 
   </div>
   <h1>Material Test Certificates</h1>
   <div class="certificates">
-    <div class="pdf">
-      <embed src="dayal-steel-fze 1.pdf" width="800px" height="600px" />
-    </div>
 
-    <div class="pdf">
-      <embed src="dss-booklet.pdf" width="800px" height="600px" />
-    </div>
-
-    <div class="pdf">
-      <embed src="MTC.pdf" width="800px" height="600px" />
-    </div>
-
-    <div class="pdf">
-      <embed src="Sample-Valve-Material-Certificates.pdf" width="800px" height="600px" />
-    </div>
-
-    <div class="pdf">
-      <embed src="Test-certificates.pdf" width="800px" height="600px" />
-    </div>
-
-    <div class="pdf">
-      <embed src="dayal-steel-fze 1.pdf" width="800px" height="600px" />
-    </div>
-
-    <div class="pdf">
-      <embed src="dss-booklet.pdf" width="800px" height="600px" />
-    </div>
-
-    <div class="pdf">
-      <embed src="MTC.pdf" width="800px" height="600px" />
-    </div>
-
-    <div class="pdf">
-      <embed src="Sample-Valve-Material-Certificates.pdf" width="800px" height="600px" />
-    </div>
 
     <div class="pdf">
       <embed src="Test-certificates.pdf" width="800px" height="600px" />
