--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ color: rgb(124, 1, 1)
             <nav class="primary">
                 <a href="#" class="menu-item active">
                     <span class="iconoir-report-columns"></span>
-                    <span class="desc">DSS</span>
+                    <span class="desc">Dashboard</span>
                 </a>
                 <a href="orders.html" class="menu-item">
                     <span class="iconoir-google-docs"></span>
