--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ color: rgb(124, 1, 1)
 
                 <a href="certificates.html" class="menu-item">
                     <span class="iconoir-leaderboard"></span>
-                    <span class="desc">Material Test Certificates</span>
+                    <span class="desc">MTC</span>
                 </a>
                 <a href="pdc.html" class="menu-item">
                     <span class="iconoir-settings"></span>
