--- a/pdc.html
+++ b/pdc.html
@@ -9,7 +9,7 @@
   <title>
     Post dated Cheques
   </title>
-  <h1> PDC </h1>
+  <h1> Post dated Cheques </h1>
 
   <!-- Include Bootstrap for styling -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
