--- a/pdc.html
+++ b/pdc.html
@@ -68,7 +68,6 @@
     margin-bottom: 20px;">
   </form>
 
-
   <div class="video">
     <img src="\bg-body.jpg">
 
@@ -84,7 +83,7 @@
             <section id="th">
               <th data-field="number">
 
-                Payment Number
+                Payment No
 
             </section>
             </th>
