--- a/pdc.html
+++ b/pdc.html
@@ -83,7 +83,7 @@
             <section id="th">
               <th data-field="number">
 
-                Payment No
+                PNo
 
             </section>
             </th>
